--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "dependencies": {},
   "husky": {
     "hooks": {
-      "pre-push": "npm run test && npm run lint"
+      "pre-push": "npm run test & npm run lint"
     }
   }
 }
