--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "set TS_NODE_COMPILER_OPTIONS={\"module\": \"commonjs\" } & mocha -r ts-node/register \"src/tests/*.ts\"",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "watch": "webpack --progress --watch"
+    "watch": "webpack --progress --watch",
+    "prepare": "husky install",
+    "create-hook": "husky add .husky/pre-push \"npm test && npm run lint\""
   },
   "repository": {
     "type": "git",
@@ -60,10 +62,5 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
   },
-  "dependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run test & npm run lint"
-    }
-  }
+  "dependencies": {}
 }
